# hexagon-ecs

./: CMakeLists.txt  Component.hpp  ECS.hpp  HxECS.hpp  LICENSE  Makefile  README.md  System.h  World.h  main.cpp
Samples/: 1.cpp
Source/: Component.hpp  Config.hpp  ECS.hpp  Entity.hpp  EntityManager.hpp  Signature.hpp  System.hpp  World.cpp  World.hpp
Source/Storage/: Storage.hpp  UnorderedMapStorage.cpp  UnorderedMapStorage.hpp  VectorStorage.cpp  VectorStorage.hpp
Storage/: Storage.hpp  UnorderedMapStorage.cpp  UnorderedMapStorage.hpp  VectorStorage.cpp  VectorStorage.hpp
